问题基本修复版