@@ -185,7 +185,7 @@ public class HomeController {
             gs.setOldPrice(sku.getOldPrice());
             gs.setPicture(imageUrlUtil.fullUrl(sku.getPicture()));
             gs.setPrice(sku.getPrice());
-            gs.setSpecs(parseSpecValues(sku.getSpecs(), specIdToName));
+            gs.setSpecs(parseSpecValues(sku.getSpecs(), null));
             return gs;
         }).collect(Collectors.toList()));
 
@@ -230,7 +230,8 @@ public class HomeController {
             return list.stream().map(m -> {
                 GoodsDetailResponse.SpecValue sv = new GoodsDetailResponse.SpecValue();
                 sv.setSpecId(m.get("spec_id"));
-                sv.setSpecName(m.get("spec_name"));
+                String sid = m.get("spec_id");
+                sv.setSpecName(specIdToName != null && sid != null ? specIdToName.get(sid) : m.get("spec_name"));
                 sv.setValueId(m.get("value_id"));
                 sv.setValueName(m.get("value_name"));
                 return sv;
@@ -257,27 +258,29 @@ public class HomeController {
     }
 
     private List<GoodsDetailResponse.SpecItem> buildSpecItems(List<ProductSpecs> specDefs, List<ProductSku> skus) {
+        Map<String, String> specIdToName = new HashMap<>();
+        for (ProductSpecs s : specDefs) if (s.getId() != null) specIdToName.put(s.getId(), s.getName());
         Map<String, GoodsDetailResponse.SpecItem> specMap = new LinkedHashMap<>();
         Map<String, Map<String, GoodsDetailResponse.SpecValue>> specValues = new LinkedHashMap<>();
         for (ProductSku sku : skus) {
-            List<GoodsDetailResponse.SpecValue> svList = parseSpecValues(sku.getSpecs(), null);
+            List<GoodsDetailResponse.SpecValue> svList = parseSpecValues(sku.getSpecs(), specIdToName);
             for (GoodsDetailResponse.SpecValue sv : svList) {
-                if (sv.getSpecId() == null || sv.getSpecName() == null) continue;
+                if (sv.getSpecId() == null) continue;
+                final String sn = specIdToName.getOrDefault(sv.getSpecId(),
+                    sv.getSpecName() != null ? sv.getSpecName() : "");
                 specMap.computeIfAbsent(sv.getSpecId(), k -> {
                     GoodsDetailResponse.SpecItem si = new GoodsDetailResponse.SpecItem();
                     si.setSpecId(sv.getSpecId());
-                    si.setSpecName(sv.getSpecName());
+                    si.setSpecName(sn);
                     return si;
                 });
-                Map<String, GoodsDetailResponse.SpecValue> vals = specValues.computeIfAbsent(
-                    sv.getSpecName(), k -> new LinkedHashMap<>());
+                Map<String, GoodsDetailResponse.SpecValue> vals = specValues.computeIfAbsent(sn, k -> new LinkedHashMap<>());
                 sv.setAvailable(true);
                 vals.putIfAbsent(sv.getValueName(), sv);
             }
         }
-        return specMap.values().stream().map(si -> {
-            si.setValues(new ArrayList<>(specValues.getOrDefault(si.getSpecName(), Map.of()).values()));
-            return si;
-        }).collect(Collectors.toList());
+        return new ArrayList<>(specMap.values().stream().peek(si ->
+            si.setValues(new ArrayList<>(specValues.getOrDefault(si.getSpecName(), Map.of()).values()))
+        ).toList());
     }
 }
